Fixed overlapping issue by removing bottom border.

--- a/intermine/webapp/main/resources/webapp/webapp.css
+++ b/intermine/webapp/main/resources/webapp/webapp.css
@@ -171,7 +171,7 @@ ul#nav li.activelink a,ul#nav li.activelink a:hover{background: #FFF;color: #003
 
 .boxbody {
   background-color: white;
-  border-bottom: 1px solid #888;
+  /*border-bottom: 1px solid #888;*/
   padding-top: 10px;
 }
 
